--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,13 @@
 <body>
 <button id="disable">disable</button>
 <button id="enable">enable</button>
-<button id="vk-button">Log in with vk</button>
-<label class="switch" id="">
-  <input type="checkbox" id="checkbox" onclick="buttonClick()">
-  <span class="slider round"></span>
+<buttonw id="vk-button">Log in with vk</buttonw>
+<label class="switch">
+  <input type="checkbox">
+  <span class="slider"></span>
 </label>
 <style>
+/* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
@@ -23,12 +24,14 @@
   height: 34px;
 }
 
+/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
+/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
