--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
 <button id="enable">enable</button>
 <buttonw id="vk-button">Log in with vk</buttonw>
 <label class="switch">
-  <input type="checkbox">
+  <input type="checkbox" id="checkbox">
   <span class="slider"></span>
 </label>
 <style>
