fixed empty groups

--- a/popup.html
+++ b/popup.html
@@ -8,9 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-<button id="disable">disable</button>
-<button id="enable">enable</button>
-<buttonw id="vk-button">Log in with vk</buttonw>
+<button id="vk-button">Log in with vk</button>
 <label class="switch">
   <input type="checkbox" id="checkbox">
   <span class="slider"></span>
