--- a/popup.html
+++ b/popup.html
@@ -8,20 +8,23 @@
   <title>Document</title>
 </head>
 <body>
-<button id="disable">disable</button>
-<button id="enable">enable</button>
-<buttonw id="vk-button">Log in with vk</buttonw>
 <label class="switch">
   <input type="checkbox" id="checkbox">
   <span class="slider"></span>
 </label>
+<button id="vk-button" class="vk-button">Авторизоваться
+  <div class="top_home_logo"><img src="icons/vk_icon.svg" alt="VK"></div>
+</button>
 <style>
 /* The switch - the box around the slider */
 .switch {
   position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 54px;
+  height: 26px;
+  margin: 10px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Hide default HTML checkbox */
@@ -40,16 +43,18 @@
   right: 0;
   bottom: 0;
   background-color: #ccc;
+  border-radius: 60px;
 }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 20px;
+  width: 20px;
   left: 4px;
   bottom: 4px;
   background-color: white;
+  border-radius: 60px;
 }
 
 .slider.animation, .slider.animation:before {
@@ -58,11 +63,11 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #2ecc71;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2ecc71;
 }
 
 input:checked + .slider:before {
@@ -75,7 +80,22 @@ input:checked + .slider:before {
 .slider.round {
   border-radius: 34px;
 }
-
+.vk-button {
+  width: 100%;
+  /* color: #fff; */
+  /* height: 30px; */
+   background-color: #688BAE;
+  border: 1px solid #688BAE;
+  color: #ffff;
+  /* border-radius: 30px; */
+  font-size: 13px;
+  outline: none;
+  cursor: pointer;
+}
+.top_home_logo img {
+  width: 25px;
+  margin-top: 5px;
+}
 .slider.round:before {
   border-radius: 50%;
 }
